// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component renders card with smaller padding correctly 1`] = `
<div>
  <article
    class="Card__Article-sc-w9vqqi-0 fqbqQg"
  >
    Test text
  </article>
</div>
`;

exports[`Card component renders centred card correctly 1`] = `
<div>
  <article
    class="Card__Article-sc-w9vqqi-0 EJvCM"
  >
    Test text
  </article>
</div>
`;

exports[`Card component renders centred card with smaller padding correctly 1`] = `
<div>
  <article
    class="Card__Article-sc-w9vqqi-0 bkmErk"
  >
    Test text
  </article>
</div>
`;

exports[`Card component renders correctly 1`] = `
<div>
  <article
    class="Card__Article-sc-w9vqqi-0 gewqZA"
  >
    Test text
  </article>
</div>
`;
